因使用jdk1.4,将Integer.valueOf改成new Integer